# linux_xtts

./: CMakeLists.txt  readme.md  readme.txt
src/: XTTSClient.cpp  XTTSClient.hpp  main.cpp
workspace/: aikit_test  config.json
